--- a/donation.html
+++ b/donation.html
@@ -3,329 +3,146 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Noorussalam Madrasa – Donation Page</title>
+<title>Noorussalam Madrasa – Donate</title>
 
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-
-<!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<!-- Google Font & AOS -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
 
 <style>
-body {
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-  background: #f8faff;
-  scroll-behavior: smooth;
-}
-
-/* HERO SECTION */
-.hero {
-  text-align: center;
-  padding: 70px 0 40px;
-}
-.hero h1 { font-size: 45px; font-weight: 800; color: #0A1E59; }
-.hero p { font-size: 20px; margin-top: 10px; }
-
-/* DONATION COUNTER */
-.counter-section {
-  text-align: center;
-  padding: 40px 0;
-}
-.counter-section h2 {
-  font-size: 32px;
-  font-weight: 700;
-  color: #1E3A8A;
-}
-.counter {
-  font-size: 48px;
-  font-weight: 800;
-  color: #0A1E59;
-  margin-top: 10px;
-}
-
-/* RECENT DONORS */
-.donor-wall {
-  background: #ffffff;
-  padding: 25px 20px;
-  border-radius: 18px;
-  box-shadow: 0 8px 22px rgba(0,0,0,0.08);
-  width: 90%;
-  max-width: 500px;
-  margin: 20px auto;
-  text-align: center;
-  overflow: hidden;
-  height: 200px;
-  position: relative;
-}
-.donor-wall h3 {
-  font-size: 24px;
-  font-weight: 700;
-  color: #1E3A8A;
-  margin-bottom: 15px;
-}
-#donorList {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  padding-left: 0;
-  margin: 0;
-  list-style: none;
-}
-#donorList li {
-  font-size: 18px;
-  font-weight: 600;
-  color: #0A1E59;
-  padding: 6px 0;
-  border-bottom: 1px dashed #ddd;
-  height: 30px;
-}
-
-/* UPI SECTION */
-.upi-section {
-  padding: 70px 0;
-  text-align: center;
-}
-.upi-title { font-size: 34px; font-weight: 800; color: #1E3A8A; }
-.upi-sub { font-size: 18px; margin-bottom: 35px; }
-.upi-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  flex-wrap: wrap;
-  margin-bottom: 40px;
-}
-.upi-btn {
-  width: 170px;
-  padding: 18px;
-  text-decoration: none;
-  background: white;
-  border-radius: 16px;
-  box-shadow: 0 8px 22px rgba(0,0,0,0.08);
-  font-size: 18px;
-  font-weight: 600;
-  color: #0A1E59;
-  text-align: center;
-  transition: 0.3s;
-}
-.upi-btn img { height: 45px; margin-bottom: 10px; }
-.upi-btn:hover { transform: translateY(-5px); box-shadow: 0 12px 30px rgba(0,0,0,0.12); }
-
-/* THANK YOU POPUP */
-#thankYouPopup {
-  position: fixed;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0);
-  background: #1E3A8A;
-  color: white;
-  padding: 25px 45px;
-  font-size: 22px;
-  font-weight: 700;
-  border-radius: 20px;
-  box-shadow: 0 8px 25px rgba(0,0,0,0.25);
-  opacity: 0;
-  pointer-events: none;
-  z-index: 99999;
-  text-align: center;
-  transition: opacity 0.5s ease, transform 0.5s ease;
-}
-.bounce {
-  opacity: 1 !important;
-  transform: translate(-50%, -50%) scale(1.1);
-  animation: bounceAnim 0.6s forwards;
-}
-@keyframes bounceAnim {
-  0% { transform: translate(-50%, -50%) scale(0); }
-  60% { transform: translate(-50%, -50%) scale(1.2); }
-  100% { transform: translate(-50%, -50%) scale(1); }
-}
-
-/* PARALLAX MOSQUE */
-.parallax-mosque {
-  background-image: url('https://i.imgur.com/Jitq2I1.png');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  padding: 140px 0;
-  position: relative;
-  text-align: center;
-  color: white;
-}
-.parallax-mosque::before {
-  content: "";
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.45);
-}
-.overlay-text { position: relative; }
-.overlay-text h2 {
-  font-size: 42px;
-  font-weight: 800;
-  animation: glowText 3s infinite alternate;
-}
-@keyframes glowText {
-  from { text-shadow: 0 0 12px #ffe38a; }
-  to   { text-shadow: 0 0 25px #ffd35c; }
-}
-
-/* ADMIN PANEL */
-.admin-box {
-  background: #ffffff;
-  margin: 50px auto;
-  padding: 25px 30px;
-  width: 90%;
-  max-width: 400px;
-  border-radius: 18px;
-  box-shadow: 0 8px 22px rgba(0,0,0,0.08);
-  text-align: center;
-}
-.admin-box input {
-  width: 80%;
-  padding: 12px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  margin-bottom: 12px;
-  font-size: 16px;
-}
-.admin-box button {
-  background: #1e3a8a;
-  color: white;
-  border: none;
-  padding: 12px 28px;
-  font-size: 16px;
-  border-radius: 12px;
-  cursor: pointer;
-}
-
-/* AUDIO */
-audio { display: none; }
+body {font-family:'Poppins',sans-serif; background:#f8faff; margin:0; scroll-behavior:smooth;}
+section {padding:60px 15px; max-width:1100px; margin:auto;}
+h2,h3 {color:#1E3A8A; text-align:center;}
+/* Progress Bar */
+.progress-container {margin:30px 0;}
+.progress {height:24px; border-radius:12px; background:#e2e8f0;}
+.progress-bar {height:24px; border-radius:12px; width:0%; background:#1E3A8A; transition:width 1s;}
+.amount-buttons {display:flex; justify-content:center; gap:15px; margin-bottom:20px;}
+.amount-buttons button {padding:12px 25px; border:none; border-radius:12px; background:#1E3A8A; color:#fff; font-weight:600; cursor:pointer; transition:0.3s;}
+.amount-buttons button.active, .amount-buttons button:hover {background:#0A1E59;}
+.custom-amount {text-align:center; margin-bottom:20px;}
+.custom-amount input {padding:10px 15px; width:150px; font-size:16px; border-radius:10px; border:1px solid #ccc;}
+.donate-btn {display:block; margin:20px auto; background:#ffb703; color:#0A1E59; font-weight:700; font-size:18px; padding:12px 30px; border:none; border-radius:12px; cursor:pointer; transition:0.3s;}
+.donate-btn:hover {background:#ffa500;}
+.upi-section {text-align:center; margin-top:40px;}
+.upi-btn {display:inline-block; text-decoration:none; background:white; padding:15px; margin:10px; border-radius:14px; box-shadow:0 6px 18px rgba(0,0,0,0.1); color:#0A1E59; font-weight:600; transition:0.3s;}
+.upi-btn img {height:40px; display:block; margin:auto 0 5px;}
+.qr-box img {margin-top:20px; width:220px; border-radius:12px;}
 </style>
 </head>
 <body>
 
 <!-- HERO -->
-<section class="hero">
-  <h1>Support Noorussalam Madrasa</h1>
-  <p>Your donation is Sadaqah Jariyah</p>
+<section data-aos="fade-down">
+<h2>Support Noorussalam Madrasa</h2>
+<p style="text-align:center; color:#1E3A8A; font-weight:600;">Your donation is Sadaqah Jariyah</p>
 </section>
 
-<!-- DONATION COUNTER -->
-<section class="counter-section">
-  <h2>Total Donations Collected</h2>
-  <div id="totalDonation" class="counter">₹0</div>
-</section>
-
-<!-- RECENT DONORS -->
-<section class="donor-wall">
-  <h3>Recent Donors</h3>
-  <ul id="donorList"></ul>
-</section>
-
-<!-- UPI DONATION -->
-<section class="upi-section">
-  <div class="container">
-    <h2 class="upi-title">Donate Easily via UPI</h2>
-    <p class="upi-sub">Fast, secure & direct donation</p>
-    <div class="upi-buttons">
-      <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Google_Pay_Logo.svg">Google Pay
-      </a>
-      <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/PhonePe_Logo.svg">PhonePe
-      </a>
-      <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Paytm_logo.png">Paytm
-      </a>
-    </div>
+<!-- PROGRESS BAR -->
+<section data-aos="fade-up">
+<div class="progress-container">
+  <div style="display:flex; justify-content:space-between; font-weight:600; margin-bottom:5px;">
+    <span>₹<span id="currentDonation">0</span></span>
+    <span>Goal: ₹500,000</span>
   </div>
-</section>
-
-<!-- ADMIN PANEL -->
-<section class="admin-box">
-  <h2>🔐 Admin Panel</h2>
-  <p>Add custom donation amount</p>
-  <input type="text" id="donorName" placeholder="Donor Name">
-  <input type="number" id="adminAmount" placeholder="Enter amount in INR">
-  <button onclick="addDonation()">Add Donation</button>
-</section>
-
-<!-- THANK YOU POPUP -->
-<div id="thankYouPopup">Thank you for your donation! 💖</div>
-
-<!-- PARALLAX MOSQUE -->
-<section class="parallax-mosque">
-  <div class="overlay-text">
-    <h2>“Whoever builds a masjid, Allah will build for him a house in Jannah.”</h2>
-    <p>— Prophet Muhammad ﷺ</p>
+  <div class="progress">
+    <div id="donationProgress" class="progress-bar"></div>
   </div>
+</div>
+
+<!-- Amount Buttons -->
+<div class="amount-buttons">
+  <button data-amount="500">₹500</button>
+  <button data-amount="1000">₹1000</button>
+  <button data-amount="2000">₹2000</button>
+  <button data-amount="5000">₹5000</button>
+</div>
+<div class="custom-amount">
+  <input type="number" id="customAmount" placeholder="Custom ₹">
+</div>
+<button class="donate-btn" id="donateNow">Donate Now</button>
 </section>
 
-<!-- AUDIO -->
-<audio id="donateSound">
-  <source src="https://assets.mixkit.co/sfx/preview/mixkit-software-interface-start-2574.mp3">
-</audio>
+<!-- UPI / QR -->
+<section class="upi-section" data-aos="fade-up">
+<h3>Or Donate via UPI</h3>
+<a href="#" class="upi-btn"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Google_Pay_Logo.svg">Google Pay</a>
+<a href="#" class="upi-btn"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/PhonePe_Logo.svg">PhonePe</a>
+<a href="#" class="upi-btn"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Paytm_logo.png">Paytm</a>
+<div class="qr-box">
+  <img src="YOUR_QR_IMAGE.png" alt="UPI QR">
+</div>
+</section>
 
-<!-- CONFETTI CDN -->
+<!-- Audio -->
+<audio id="donateSound" src="https://assets.mixkit.co/sfx/preview/mixkit-software-interface-start-2574.mp3"></audio>
+
+<!-- SCRIPTS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-
 <script>
-// Initial total donations
-let totalDonation = 452300;
-document.getElementById("totalDonation").innerHTML = "₹" + totalDonation.toLocaleString();
+// AOS
+AOS.init({once:true});
 
-// Donor list array
-let donors = ["Abdul Rahman – ₹500","Anonymous – ₹2000","Afsal – ₹1000"];
-let donorList = document.getElementById("donorList");
-donors.forEach(d => {
-  let li = document.createElement("li");
-  li.textContent = d;
-  donorList.appendChild(li);
-});
+// Initial donation
+let donationGoal = 500000;
+let currentDonation = 452300;
+document.getElementById('currentDonation').innerText = currentDonation.toLocaleString();
+updateProgressBar();
 
-// Scroll Donor Wall
-let scrollPos = 0;
-function scrollDonors() {
-  scrollPos += 0.5;
-  if(scrollPos >= donorList.scrollHeight - donorList.parentElement.clientHeight) scrollPos = 0;
-  donorList.style.top = -scrollPos + "px";
-  requestAnimationFrame(scrollDonors);
+// Live donation simulation (random increases)
+setInterval(()=>{
+  let randomDonation = Math.floor(Math.random()*2000);
+  currentDonation += randomDonation;
+  if(currentDonation>donationGoal) currentDonation = donationGoal;
+  document.getElementById('currentDonation').innerText = currentDonation.toLocaleString();
+  updateProgressBar();
+}, 5000);
+
+function updateProgressBar() {
+  let percent = (currentDonation/donationGoal)*100;
+  if(percent>100) percent=100;
+  document.getElementById('donationProgress').style.width = percent+'%';
 }
-scrollDonors();
 
-// UPI button donation
-document.querySelectorAll(".upi-btn").forEach(btn => {
-  btn.addEventListener("click", () => {
-    addDonation("Anonymous", Math.floor(Math.random()*1000)+100);
+// Amount buttons
+const buttons = document.querySelectorAll('.amount-buttons button');
+let selectedAmount = 0;
+buttons.forEach(btn=>{
+  btn.addEventListener('click',()=>{
+    buttons.forEach(b=>b.classList.remove('active'));
+    btn.classList.add('active');
+    selectedAmount = Number(btn.dataset.amount);
+    document.getElementById('customAmount').value='';
   });
 });
 
-// Admin donation function
-function addDonation(name, amount) {
-  const donorName = name || document.getElementById("donorName").value || "Anonymous";
-  const val = amount || Number(document.getElementById("adminAmount").value);
-  if(val > 0) {
-    totalDonation += val;
-    document.getElementById("totalDonation").innerHTML = "₹" + totalDonation.toLocaleString();
+// Custom input
+const customInput = document.getElementById('customAmount');
+customInput.addEventListener('input', ()=>{
+  selectedAmount = Number(customInput.value);
+  buttons.forEach(b=>b.classList.remove('active'));
+});
 
-    let li = document.createElement("li");
-    li.textContent = donorName + " – ₹" + val.toLocaleString();
-    donorList.insertBefore(li, donorList.firstChild);
-
-    if(donorList.children.length > 20) donorList.removeChild(donorList.lastChild);
-
-    document.getElementById("donateSound").play();
-    confetti({ particleCount: 120, spread: 70, origin: { y: 0.6 } });
-
-    const popup = document.getElementById("thankYouPopup");
-    popup.classList.add("bounce");
-    setTimeout(() => { popup.classList.remove("bounce"); }, 1500);
-
-    document.getElementById("donorName").value = '';
-    document.getElementById("adminAmount").value = '';
+// Donate Now
+function donate() {
+  if(selectedAmount>0){
+    currentDonation += selectedAmount;
+    if(currentDonation>donationGoal) currentDonation = donationGoal;
+    document.getElementById('currentDonation').innerText = currentDonation.toLocaleString();
+    updateProgressBar();
+    document.getElementById('donateSound').play();
+    confetti({ particleCount:150, spread:70, origin:{y:0.6}});
+    alert('Thank you for donating ₹'+selectedAmount+'! 🙏');
+    selectedAmount=0;
+    customInput.value='';
+    buttons.forEach(b=>b.classList.remove('active'));
+  } else {
+    alert('Please select or enter a donation amount');
   }
 }
+
+document.getElementById('donateNow').addEventListener('click',donate);
 </script>
 </body>
 </html>
