--- a/index.html
+++ b/index.html
@@ -1129,29 +1129,29 @@
 <!-- PRINCIPAL MESSAGE SECTION -->
 <section class="principal-section py-5">
 
-  <!-- Floating Particles -->
-  <div class="particles">
+  <!-- Animated Background Orbs -->
+  <div class="background-orbs">
     <span></span><span></span><span></span><span></span><span></span>
     <span></span><span></span><span></span><span></span><span></span>
   </div>
 
-  <!-- Crescent + Stars -->
+  <!-- Crescent + Sparkling Stars -->
   <div class="crescent-star">
     <div class="crescent"></div>
     <div class="star star1"></div>
     <div class="star star2"></div>
     <div class="star star3"></div>
+    <div class="star star4"></div>
   </div>
-
-  <!-- Light sweep -->
-  <div class="light-overlay"></div>
 
   <div class="container">
 
     <!-- Quran Verse -->
     <div class="text-center mb-4">
-      <h5 class="quran-text">﴾رَبِّ زِدْنِي عِلْمًا﴿</h5>
-      <p class="quran-translation">"My Lord, increase me in knowledge." (Qur'an 20:114)</p>
+      <h5 class="quran-text fade-line">﴾رَبِّ زِدْنِي عِلْمًا﴿</h5>
+      <p class="quran-translation fade-line" style="animation-delay: 1s;">
+        "My Lord, increase me in knowledge." (Qur'an 20:114)
+      </p>
     </div>
 
     <!-- Principal Card -->
@@ -1161,7 +1161,8 @@
       <div class="col-md-4 text-center">
         <div class="photo-frame">
           <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg" alt="Principal" class="principal-photo">
-          <div class="gold-ring"></div>
+          <div class="photo-halo"></div>
+          <div class="photo-particles"></div>
         </div>
       </div>
 
@@ -1192,153 +1193,174 @@
 </section>
 
 <style>
-/* Background */
+/* Animated Gradient Background */
 .principal-section {
   position: relative;
-  background: linear-gradient(135deg, #eef6ff, #dcecff);
   overflow: hidden;
+  background: linear-gradient(120deg, #e0f7fa, #e1bee7, #fff9c4);
+  background-size: 300% 300%;
+  animation: bgGradient 20s ease infinite;
+}
+@keyframes bgGradient {
+  0% {background-position:0% 50%;}
+  50% {background-position:100% 50%;}
+  100% {background-position:0% 50%;}
 }
 
-/* Light sweep */
-.light-overlay {
+/* Floating Orbs */
+.background-orbs span {
   position: absolute;
-  top: 0; left: -200%;
-  width: 200%;
-  height: 100%;
-  background: linear-gradient(110deg, transparent 40%, rgba(255,255,255,0.6) 50%, transparent 60%);
-  animation: shine 8s infinite;
-}
-@keyframes shine {
-  0% { left: -200%; }
-  100% { left: 200%; }
-}
-
-/* Floating particles */
-.particles span {
-  position: absolute;
-  width: 6px; height: 6px;
+  width: 10px; height: 10px;
   background: rgba(255,255,255,0.4);
   border-radius: 50%;
-  animation: floatParticle 12s infinite ease-in-out;
+  filter: blur(2px);
+  animation: floatOrb linear infinite;
 }
-.particles span:nth-child(1) { top: 20%; left: 10%; animation-duration: 10s; }
-.particles span:nth-child(2) { top: 60%; left: 30%; animation-duration: 12s; }
-.particles span:nth-child(3) { top: 10%; left: 70%; animation-duration: 14s; }
-.particles span:nth-child(4) { top: 80%; left: 50%; animation-duration: 16s; }
-.particles span:nth-child(5) { top: 40%; left: 90%; animation-duration: 18s; }
-@keyframes floatParticle {
-  0% { transform: translateY(0) scale(1); opacity: 0.3; }
-  50% { opacity: 1; }
-  100% { transform: translateY(-80px) scale(1.6); opacity: 0; }
+.background-orbs span:nth-child(1) { top:10%; left:15%; animation-duration:15s; }
+.background-orbs span:nth-child(2) { top:40%; left:30%; animation-duration:12s; }
+.background-orbs span:nth-child(3) { top:60%; left:50%; animation-duration:18s; }
+.background-orbs span:nth-child(4) { top:30%; left:70%; animation-duration:20s; }
+.background-orbs span:nth-child(5) { top:80%; left:80%; animation-duration:17s; }
+.background-orbs span:nth-child(6) { top:50%; left:10%; animation-duration:19s; }
+.background-orbs span:nth-child(7) { top:20%; left:85%; animation-duration:16s; }
+.background-orbs span:nth-child(8) { top:70%; left:40%; animation-duration:21s; }
+.background-orbs span:nth-child(9) { top:25%; left:55%; animation-duration:14s; }
+.background-orbs span:nth-child(10){ top:75%; left:20%; animation-duration:22s; }
+@keyframes floatOrb {
+  0% { transform: translateY(0) scale(0.8); opacity:0.3; }
+  50%{ transform: translateY(-50px) scale(1.2); opacity:0.8; }
+  100%{ transform: translateY(0) scale(0.8); opacity:0.3; }
 }
 
-/* Crescent + stars */
+/* Crescent + Sparkling Stars */
 .crescent-star {
   position: absolute;
-  top: 10%; right: 10%;
-  width: 100px; height: 100px;
-  pointer-events: none;
+  top: 5%; right: 10%;
+  width: 120px; height: 120px;
   z-index: 1;
 }
 .crescent {
-  width: 60px; height: 60px;
+  width: 70px; height: 70px;
   border-radius: 50%;
-  background: radial-gradient(circle at 20% 20%, #ffd700, transparent);
+  background: radial-gradient(circle at 30% 30%, #ffd700, transparent);
   position: absolute;
-  animation: floatCrescent 6s ease-in-out infinite alternate;
+  animation: floatCrescent 8s ease-in-out infinite alternate;
+  box-shadow: 0 0 15px rgba(255,215,0,0.6);
 }
 .star {
-  width: 10px; height: 10px;
-  background: #ffd700;
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  width: 8px; height: 8px;
+  background: #fff;
+  border-radius: 50%;
   position: absolute;
-  animation: floatStar 8s infinite alternate;
+  animation: floatStar 6s infinite alternate, twinkle 3s infinite;
 }
-.star1 { top: -10px; left: 70px; animation-delay: 0s; }
-.star2 { top: 40px; left: 50px; animation-delay: 2s; }
-.star3 { top: 20px; left: 80px; animation-delay: 4s; }
-@keyframes floatCrescent {
-  0% { transform: translateY(0) rotate(0deg); }
-  50% { transform: translateY(-15px) rotate(15deg); }
-  100% { transform: translateY(0) rotate(0deg); }
-}
-@keyframes floatStar {
-  0% { transform: translateY(0) scale(1); }
-  50% { transform: translateY(-10px) scale(1.2); }
-  100% { transform: translateY(0) scale(1); }
-}
+.star1 { top:-5px; left:80px; animation-delay:0s; }
+.star2 { top:30px; left:60px; animation-delay:1s; }
+.star3 { top:10px; left:100px; animation-delay:2s; }
+.star4 { top:50px; left:90px; animation-delay:3s; }
+@keyframes floatCrescent { 0%{transform:translateY(0) rotate(0deg);} 50%{transform:translateY(-15px) rotate(20deg);} 100%{transform:translateY(0) rotate(0deg);} }
+@keyframes floatStar { 0%{transform:translateY(0);} 50%{transform:translateY(-10px);} 100%{transform:translateY(0);} }
+@keyframes twinkle { 0%,100%{opacity:1;} 50%{opacity:0.3;} }
 
 /* Principal Card Glass + Hover */
 .principal-card {
-  background: rgba(255,255,255,0.55);
-  backdrop-filter: blur(14px);
+  background: rgba(255,255,255,0.3);
+  backdrop-filter: blur(20px);
   border-radius: 25px;
-  padding: 30px;
-  border: 1.5px solid rgba(255,255,255,0.5);
-  box-shadow: 0 12px 45px rgba(0,0,0,0.15);
+  padding: 35px;
+  border: 1.5px solid rgba(255,255,255,0.4);
+  box-shadow: 0 15px 50px rgba(0,0,0,0.2);
   position: relative;
   overflow: hidden;
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
+  transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
 .principal-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 18px 60px rgba(0,0,0,0.25);
+  transform: translateY(-10px);
+  box-shadow: 0 25px 70px rgba(0,0,0,0.35);
 }
 
-/* Gradient Animated Title */
+/* Gradient Animated Title + Shimmer */
 .principal-title {
   font-size: 2rem;
   font-weight: 700;
-  background: linear-gradient(90deg, #ffcc33, #ff9933, #ffcc33);
-  background-size: 200% 200%;
+  background: linear-gradient(90deg, #ffd700, #ff8c00, #ffd700);
+  background-size: 300% 300%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: gradientAnim 4s ease infinite;
+  animation: gradientAnim 6s ease infinite;
+  text-shadow: 0 0 5px rgba(255,200,0,0.7);
 }
-@keyframes gradientAnim {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
-}
+@keyframes gradientAnim { 0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%} }
 
 /* Principal Text */
 .principal-text {
   font-size: 1rem;
-  line-height: 1.7;
+  line-height: 1.8;
   color: #333;
 }
 
-/* Principal Photo */
+/* Fade in Quran Verse line by line */
+.fade-line {
+  opacity: 0;
+  transform: translateY(15px);
+  animation: fadeLine 1s forwards;
+}
+.fade-line:nth-child(2){ animation-delay: 1s; }
+@keyframes fadeLine {
+  0% {opacity:0; transform:translateY(15px);}
+  100% {opacity:1; transform:translateY(0);}
+}
+
+/* Principal Photo + Halo + 3D tilt */
 .photo-frame {
   position: relative;
   display: inline-block;
+  perspective: 1000px;
 }
 .principal-photo {
   width: 230px; height: 230px;
-  object-fit: cover;
   border-radius: 50%;
-  border: 8px solid white;
-  box-shadow: 0 6px 28px rgba(0,0,0,0.25);
-  animation: floatUpDown 4s ease-in-out infinite;
+  border: 6px solid rgba(255,255,255,0.6);
+  box-shadow: 0 8px 28px rgba(0,0,0,0.25);
+  transition: transform 0.6s ease, box-shadow 0.6s ease;
 }
-@keyframes floatUpDown {
-  0%,100% { transform: translateY(0); }
-  50% { transform: translateY(-10px); }
+.photo-frame:hover .principal-photo {
+  transform: rotateY(15deg) rotateX(5deg) scale(1.05);
+  box-shadow: 0 12px 35px rgba(0,0,0,0.35);
 }
-
-/* Gold Ring */
-.gold-ring {
+.photo-halo {
   position: absolute;
   top: -10px; left: -10px;
   width: 250px; height: 250px;
   border-radius: 50%;
-  border: 4px dashed rgba(255,215,0,0.7);
-  animation: spin 18s linear infinite;
+  background: radial-gradient(circle, rgba(255,215,0,0.3), transparent 70%);
+  animation: haloPulse 3s ease-in-out infinite alternate;
+  z-index: -1;
 }
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+
+/* Sparkling particles orbiting principal photo */
+.photo-particles {
+  position: absolute;
+  top: 50%; left: 50%;
+  width: 240px; height: 240px;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
 }
+.photo-particles::before, .photo-particles::after {
+  content: '';
+  position: absolute;
+  width: 6px; height: 6px;
+  background: rgba(255, 223, 0,0.8);
+  border-radius: 50%;
+  top: 50%; left: 0%;
+  animation: orbit 5s linear infinite;
+}
+.photo-particles::after { animation-delay: 2.5s; }
+@keyframes orbit {
+  0% { transform: rotate(0deg) translateX(120px) rotate(0deg);}
+  100% { transform: rotate(360deg) translateX(120px) rotate(-360deg);}
+}
+@keyframes haloPulse { 0%{transform:scale(0.9);opacity:0.5;} 100%{transform:scale(1.1);opacity:0.8;} }
 
 /* Signature Animation */
 .signature {
@@ -1674,6 +1696,7 @@
 
 </body>
 </html>
+
 
 
 
