--- a/index.html
+++ b/index.html
@@ -1124,8 +1124,6 @@
   }
 }
 </style>
-
-  
 <!-- PRINCIPAL MESSAGE SECTION -->
 <section class="principal-section py-5">
 
@@ -1169,15 +1167,11 @@
       <!-- Principal Message -->
       <div class="col-md-8">
         <h2 class="principal-title">Swadar Muallim’s Message</h2>
-        <p class="principal-text">
-          Assalamu Alaikum Warahmatullahi Wabarakatuh.<br><br>
-          Noorussalam Madrasa continues to lead with excellence in Islamic
-          education, moral values, and spiritual development. Our goal is to
-          nurture students who are academically strong, spiritually grounded, and
-          socially responsible.<br><br>
-          With Allah’s grace and the support of our teachers and parents, we
-          strive to build a bright future for every learner.
-        </p>
+        <div class="principal-text">
+          <p>Assalamu Alaikum Warahmatullahi Wabarakatuh.</p>
+          <p>Noorussalam Madrasa continues to lead with excellence in Islamic education, moral values, and spiritual development. Our goal is to nurture students who are academically strong, spiritually grounded, and socially responsible.</p>
+          <p>With Allah’s grace and the support of our teachers and parents, we strive to build a bright future for every learner.</p>
+        </div>
 
         <!-- Signature -->
         <div class="signature-box mt-4">
@@ -1193,7 +1187,7 @@
 </section>
 
 <style>
-/* Animated Gradient Background */
+/* Gradient Animated Background */
 .principal-section {
   position: relative;
   overflow: hidden;
@@ -1201,11 +1195,7 @@
   background-size: 300% 300%;
   animation: bgGradient 20s ease infinite;
 }
-@keyframes bgGradient {
-  0% {background-position:0% 50%;}
-  50% {background-position:100% 50%;}
-  100% {background-position:0% 50%;}
-}
+@keyframes bgGradient { 0%{background-position:0% 50%;} 50%{background-position:100% 50%;} 100%{background-position:0% 50%;} }
 
 /* Floating Orbs */
 .background-orbs span {
@@ -1226,34 +1216,12 @@
 .background-orbs span:nth-child(8) { top:70%; left:40%; animation-duration:21s; }
 .background-orbs span:nth-child(9) { top:25%; left:55%; animation-duration:14s; }
 .background-orbs span:nth-child(10){ top:75%; left:20%; animation-duration:22s; }
-@keyframes floatOrb {
-  0% { transform: translateY(0) scale(0.8); opacity:0.3; }
-  50%{ transform: translateY(-50px) scale(1.2); opacity:0.8; }
-  100%{ transform: translateY(0) scale(0.8); opacity:0.3; }
-}
+@keyframes floatOrb { 0%{transform:translateY(0) scale(0.8);opacity:0.3;} 50%{transform:translateY(-50px) scale(1.2);opacity:0.8;} 100%{transform:translateY(0) scale(0.8);opacity:0.3;} }
 
-/* Crescent + Sparkling Stars */
-.crescent-star {
-  position: absolute;
-  top: 5%; right: 10%;
-  width: 120px; height: 120px;
-  z-index: 1;
-}
-.crescent {
-  width: 70px; height: 70px;
-  border-radius: 50%;
-  background: radial-gradient(circle at 30% 30%, #ffd700, transparent);
-  position: absolute;
-  animation: floatCrescent 8s ease-in-out infinite alternate;
-  box-shadow: 0 0 15px rgba(255,215,0,0.6);
-}
-.star {
-  width: 8px; height: 8px;
-  background: #fff;
-  border-radius: 50%;
-  position: absolute;
-  animation: floatStar 6s infinite alternate, twinkle 3s infinite;
-}
+/* Crescent + Stars */
+.crescent-star { position:absolute; top:5%; right:10%; width:120px; height:120px; z-index:1; }
+.crescent { width:70px; height:70px; border-radius:50%; background:radial-gradient(circle at 30% 30%, #ffd700, transparent); position:absolute; animation:floatCrescent 8s ease-in-out infinite alternate; box-shadow:0 0 15px rgba(255,215,0,0.6);}
+.star { width:8px; height:8px; background:#fff; border-radius:50%; position:absolute; animation:floatStar 6s infinite alternate, twinkle 3s infinite; }
 .star1 { top:-5px; left:80px; animation-delay:0s; }
 .star2 { top:30px; left:60px; animation-delay:1s; }
 .star3 { top:10px; left:100px; animation-delay:2s; }
@@ -1262,119 +1230,64 @@
 @keyframes floatStar { 0%{transform:translateY(0);} 50%{transform:translateY(-10px);} 100%{transform:translateY(0);} }
 @keyframes twinkle { 0%,100%{opacity:1;} 50%{opacity:0.3;} }
 
-/* Principal Card Glass + Hover */
-.principal-card {
-  background: rgba(255,255,255,0.3);
-  backdrop-filter: blur(20px);
-  border-radius: 25px;
-  padding: 35px;
-  border: 1.5px solid rgba(255,255,255,0.4);
-  box-shadow: 0 15px 50px rgba(0,0,0,0.2);
-  position: relative;
-  overflow: hidden;
-  transition: transform 0.5s ease, box-shadow 0.5s ease;
-}
-.principal-card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 25px 70px rgba(0,0,0,0.35);
-}
+/* Principal Card */
+.principal-card { background: rgba(255,255,255,0.3); backdrop-filter: blur(20px); border-radius:25px; padding:35px; border:1.5px solid rgba(255,255,255,0.4); box-shadow:0 15px 50px rgba(0,0,0,0.2); transition:transform 0.5s ease, box-shadow 0.5s ease; position:relative; overflow:hidden; }
+.principal-card:hover { transform:translateY(-10px); box-shadow:0 25px 70px rgba(0,0,0,0.35); }
 
-/* Gradient Animated Title + Shimmer */
-.principal-title {
-  font-size: 2rem;
-  font-weight: 700;
-  background: linear-gradient(90deg, #ffd700, #ff8c00, #ffd700);
-  background-size: 300% 300%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: gradientAnim 6s ease infinite;
-  text-shadow: 0 0 5px rgba(255,200,0,0.7);
-}
+/* Gradient Title */
+.principal-title { font-size:2rem; font-weight:700; background:linear-gradient(90deg, #ffd700, #ff8c00, #ffd700); background-size:300% 300%; -webkit-background-clip:text; -webkit-text-fill-color:transparent; animation:gradientAnim 6s ease infinite; text-shadow:0 0 5px rgba(255,200,0,0.7);}
 @keyframes gradientAnim { 0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%} }
 
-/* Principal Text */
-.principal-text {
-  font-size: 1rem;
-  line-height: 1.8;
-  color: #333;
-}
+/* Principal Text with Glow */
+.principal-text { font-size:1rem; line-height:1.9; color:#333; text-align:justify; position:relative; padding:20px 25px; border-radius:15px; background:rgba(255,255,255,0.25); box-shadow:0 0 20px rgba(255,223,0,0.3),0 0 40px rgba(255,223,0,0.2); backdrop-filter:blur(10px); transition:all 0.5s ease; }
+.principal-text:hover { box-shadow:0 0 30px rgba(255,223,0,0.5),0 0 60px rgba(255,223,0,0.35); }
+.principal-text p { text-indent:30px; margin-bottom:1em; }
 
-/* Fade in Quran Verse line by line */
-.fade-line {
-  opacity: 0;
-  transform: translateY(15px);
-  animation: fadeLine 1s forwards;
-}
-.fade-line:nth-child(2){ animation-delay: 1s; }
-@keyframes fadeLine {
-  0% {opacity:0; transform:translateY(15px);}
-  100% {opacity:1; transform:translateY(0);}
-}
-
-/* Principal Photo + Halo + 3D tilt */
-.photo-frame {
-  position: relative;
-  display: inline-block;
-  perspective: 1000px;
-}
-.principal-photo {
-  width: 230px; height: 230px;
-  border-radius: 50%;
-  border: 6px solid rgba(255,255,255,0.6);
-  box-shadow: 0 8px 28px rgba(0,0,0,0.25);
-  transition: transform 0.6s ease, box-shadow 0.6s ease;
-}
-.photo-frame:hover .principal-photo {
-  transform: rotateY(15deg) rotateX(5deg) scale(1.05);
-  box-shadow: 0 12px 35px rgba(0,0,0,0.35);
-}
-.photo-halo {
-  position: absolute;
-  top: -10px; left: -10px;
-  width: 250px; height: 250px;
-  border-radius: 50%;
-  background: radial-gradient(circle, rgba(255,215,0,0.3), transparent 70%);
-  animation: haloPulse 3s ease-in-out infinite alternate;
-  z-index: -1;
-}
-
-/* Sparkling particles orbiting principal photo */
-.photo-particles {
-  position: absolute;
-  top: 50%; left: 50%;
-  width: 240px; height: 240px;
-  pointer-events: none;
-  transform: translate(-50%, -50%);
-}
-.photo-particles::before, .photo-particles::after {
-  content: '';
-  position: absolute;
-  width: 6px; height: 6px;
-  background: rgba(255, 223, 0,0.8);
-  border-radius: 50%;
-  top: 50%; left: 0%;
-  animation: orbit 5s linear infinite;
-}
-.photo-particles::after { animation-delay: 2.5s; }
-@keyframes orbit {
-  0% { transform: rotate(0deg) translateX(120px) rotate(0deg);}
-  100% { transform: rotate(360deg) translateX(120px) rotate(-360deg);}
-}
+/* Principal Photo + Halo + Orbit Particles */
+.photo-frame { position:relative; display:inline-block; perspective:1000px; }
+.principal-photo { width:230px; height:230px; border-radius:50%; border:6px solid rgba(255,255,255,0.6); box-shadow:0 8px 28px rgba(0,0,0,0.25); transition:transform 0.6s ease, box-shadow 0.6s ease; }
+.photo-frame:hover .principal-photo { transform:rotateY(15deg) rotateX(5deg) scale(1.05); box-shadow:0 12px 35px rgba(0,0,0,0.35); }
+.photo-halo { position:absolute; top:-10px; left:-10px; width:250px; height:250px; border-radius:50%; background:radial-gradient(circle, rgba(255,215,0,0.3), transparent 70%); animation:haloPulse 3s ease-in-out infinite alternate; z-index:-1; }
+.photo-particles { position:absolute; top:50%; left:50%; width:240px;height:240px; transform:translate(-50%,-50%); pointer-events:none; }
+.photo-particles::before, .photo-particles::after { content:''; position:absolute; width:6px; height:6px; background:rgba(255,223,0,0.8); border-radius:50%; top:50%; left:0%; animation:orbit 5s linear infinite; }
+.photo-particles::after { animation-delay:2.5s; }
+@keyframes orbit { 0%{transform:rotate(0deg) translateX(120px) rotate(0deg);} 100%{transform:rotate(360deg) translateX(120px) rotate(-360deg);} }
 @keyframes haloPulse { 0%{transform:scale(0.9);opacity:0.5;} 100%{transform:scale(1.1);opacity:0.8;} }
 
 /* Signature Animation */
-.signature {
-  width: 170px; opacity: 0;
+.signature { width:170px; opacity:0; }
+.animated-signature { animation:fadeInSignature 2.7s ease forwards; }
+@keyframes fadeInSignature { 0%{opacity:0;filter:blur(6px);transform:translateY(8px);} 60%{opacity:1;filter:blur(0);transform:translateY(0);} 100%{opacity:1;} }
+
+/* Quran Verse Fade */
+.fade-line { opacity:0; transform:translateY(15px); animation:fadeLine 1s forwards; }
+.fade-line:nth-child(2) { animation-delay:1s; }
+@keyframes fadeLine { 0%{opacity:0; transform:translateY(15px);} 100%{opacity:1; transform:translateY(0);} }
+
+/* Responsive Adjustments */
+@media (max-width: 992px) {
+  .principal-card { flex-direction: column !important; text-align:center; padding:25px; }
+  .principal-photo { width:200px; height:200px; margin-bottom:20px; }
+  .principal-text { padding:15px 20px; }
+  .principal-title { font-size:1.8rem; }
 }
-.animated-signature {
-  animation: fadeInSignature 2.7s ease forwards;
+@media (max-width: 768px) {
+  .principal-photo { width:170px; height:170px; }
+  .principal-title { font-size:1.6rem; }
+  .principal-text { font-size:0.95rem; line-height:1.7; padding:12px 15px; }
+  .photo-halo { width:200px; height:200px; }
+  .photo-particles { width:180px; height:180px; }
 }
-@keyframes fadeInSignature {
-  0% { opacity:0; filter:blur(6px); transform: translateY(8px); }
-  60% { opacity:1; filter:blur(0); transform: translateY(0); }
-  100% { opacity:1; }
+@media (max-width: 480px) {
+  .principal-photo { width:140px; height:140px; }
+  .principal-title { font-size:1.4rem; }
+  .principal-text { font-size:0.9rem; line-height:1.6; padding:10px 12px; }
+  .photo-halo { width:170px; height:170px; }
+  .photo-particles { width:150px; height:150px; }
 }
 </style>
+
+  
 
 <!-- HIGHLIGHTS SECTION -->
 <section id="highlights" class="py-5 bg-light">
@@ -1696,6 +1609,7 @@
 
 </body>
 </html>
+
 
 
 
