--- a/result.html
+++ b/result.html
@@ -173,7 +173,7 @@
       <i class="fa-solid fa-book-open-reader"></i> Samastha Public Exam Result
     </a>
     
-    <a href="coming-soon.html" class="btn btn-success">
+    <a href="toppers.html" class="btn btn-success">
       <i class="fa-solid fa-graduation-cap"></i> Toppers Poster
     </a>
      
@@ -187,4 +187,5 @@
 
 </body>
 </html>
+
 
