--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     </p>
 
     <div class="hero-ctas">
-      <a href="maintenance.html" class="btn primary">Join Admissions</a>
+      <a href="forms.html" class="btn primary">Join Admissions</a>
       <a href="#about" class="btn outline">Learn More</a>
       <a href="result.html" class="btn outline">Results</a>
     </div>
@@ -1445,6 +1445,7 @@
 
 </body>
 </html>
+
 
 
 
